spacing fix

--- a/src/pages/ResourcesPage/ResourcesPage.module.css
+++ b/src/pages/ResourcesPage/ResourcesPage.module.css
@@ -58,7 +58,7 @@
 }
 
 .section {
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
 }
 
 .sectionHeader {
